k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberdocgen
  labels:
    name: cyberdocgen
